# satellite-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/satellite_tracker/: Propagator.h  Satellite.h  TLEParser.h  Types.h  version.h.in
src/: CMakeLists.txt  Propagator.cpp  Satellite.cpp  TLEParser.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
